@@ -4,10 +4,6 @@
  */
 #include <testfwk.h>
 
-#if defined(PORT_HOST) || defined(SDCC_z80) || defined(SDCC_gbz80) || defined(SDCC_hc08)
-#  define code
-#endif
-
 void *p;
 int ret;
 
